# routes/callback.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const router = express.Router();
+const { qPayCallback } = require("../controller/callback");
+
+router.route("/qpay").get(qPayCallback);
+
+module.exports = router;
